# SeedSourceControl

./: .gitignore  CMakeLists.txt  MCP_CONFIG_GUIDE.md  README.md  build_mcp_server.py  build_only.bat  build_project.bat  deploy.bat  everything_mcp_server.py  everything_search.ps1  fix_device_id.ps1  fix_trae_device.ps1  generate_diagrams.py  mcp_trae_modified.json  quick_build.bat  run.bat  run_and_deploy.bat  run_with_qt_env.ps1  setup_everything_mcp.ps1  simple_run.bat  simple_run.ps1
.superpowers/brainstorm/11896-20260605125650/content/: current-layout.html  dropdown-style.html  layout-adaptive.html  toolbar-explain.html
.superpowers/brainstorm/11896-20260605125650/state/: server-info
.superpowers/brainstorm/21688-1780659464/content/: layout-options.html
.superpowers/brainstorm/21688-1780659464/state/: server-info
.trae/documents/: 2026-06-05-connection-drawer-refactor.md  2026-06-05-frontend-refactor-v2.0.md  host_deploy_plan.md  simulator_fix_plan.md
.trae/rules/: qt-context-hygiene.mdc
.trae/skills/systematic-debugging/: CREATION-LOG.md  SKILL.md  condition-based-waiting-example.ts  condition-based-waiting.md  defense-in-depth.md  find-polluter.sh  root-cause-tracing.md
.trae/specs/ui-layout-polish/: checklist.md  spec.md  tasks.md
docs/: generate_design_doc.py  generate_doc.py  generate_manual.py  ~$源模块控制器_软件设计文档.docx  种子源模块控制器_使用说明书.docx  种子源模块控制器_使用说明书_v2.0.docx  种子源模块控制器_软件设计文档.docx  种子源模块控制器_软件设计文档_v2.0.docx
docs/superpowers/specs/: 2026-06-04-seed-source-simulator-design.md
scripts/: generate_docs.py
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/alarm/: alarmmanager.cpp  alarmmanager.h
src/communication/: command.cpp  command.h  communicationworker.cpp  communicationworker.h
src/config/: configmanager.cpp  configmanager.h
src/database/: databasemanager.cpp  databasemanager.h
src/model/: devicedatamodel.cpp  devicedatamodel.h
src/protocol/: protocolparser.cpp  protocolparser.h  registermanager.cpp  registermanager.h
src/simulator/: faultinjector.cpp  faultinjector.h  simdevicestatemachine.cpp  simdevicestatemachine.h  simprotocolhandler.cpp  simprotocolhandler.h  simregistermanager.cpp  simregistermanager.h  simulationworker.cpp  simulationworker.h  simulatorcore.cpp  simulatorcore.h
src/ui/: alarmpanel.cpp  alarmpanel.h  alertwidget.cpp  alertwidget.h  configwidget.cpp  configwidget.h  connectionpanel.cpp  connectionpanel.h  connectionstatusbar.cpp  connectionstatusbar.h  controlpanel.cpp  controlpanel.h  currentcontrolwidget.cpp  currentcontrolwidget.h  dashboardwidget.cpp  dashboardwidget.h  datatablepanel.cpp  datatablepanel.h  logpanel.cpp  logpanel.h  monitorwidget.cpp  monitorwidget.h  realtimeplotpanel.cpp  realtimeplotpanel.h  statuspanel.cpp  statuspanel.h  temperaturecontrolwidget.cpp  temperaturecontrolwidget.h
src/visualization/: enhancedchartwidget.cpp  enhancedchartwidget.h  realtimeplotwidget.cpp  realtimeplotwidget.h  statisticscalculator.cpp  statisticscalculator.h
styles/: default.qss
tests/: CMakeLists.txt  test_communication_worker.cpp  test_simulation.cpp
